--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,4 @@
-.container{
-  width:100%;
-  margin:auto;
 
-}
 
 
 
@@ -11,13 +7,14 @@
   background-color: #008080;
   color:#fafad2;
   padding-left: 50px;
+
 }
-h1{
+ul h1{
   float:left;
-  margin:0 auto;
-  display:inline-block;
+  width:12.5%
   line-height: 70px;
-  margin-right:8px;
+  margin:10px 3px;
+
 }
 
 
@@ -63,14 +60,15 @@ display:block;
 .btn-wrapper{
   text-align: center;
   margin-top:150px;
+  padding-bottom:70px;
   color:white;
 }
 a:link, a:visited, a:active {
   text-decoration: none;
   color:white;
 }
-a:hover{
-  opacity:0.9;
+.profile a:hover{
+  opacity:0.8;
 }
 ul .omoshiro{
   font-size:30px;
@@ -100,6 +98,15 @@ ul .omoshiro{
   height:70px;
   background-color:#800000;
   color:#fa8072;
-  margin-top:50px;
+
   padding:0 30px
+}
+.footer-left {
+  padding-left:40px;
+}
+.footer-left h1{
+  float:left;
+  width:12.5%
+  line-height: 70px;
+  margin:10px 3px;
 }
